server/k8s/apps/mkdocs/mkdocs-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mkdocs
spec:
  type: ClusterIP
  selector:
    app: mkdocs
  ports:
    - port: 80
      targetPort: 8000
