server/k8s/apps/mkdocs/mkdocks-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mkdocs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
    traefik.ingress.kubernetes.io/router.tls.certresolver: le
spec:
  rules:
    - host: lovekapibarasan.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mkdocs
                port:
                  number: 80
